css/phone-carousel.css
.carousel .carousel-indicators .active,
.carousel .carousel-indicators .carousel-ind {
  background-color: #9d94e6;
  height: 10px;
  width: 10px;
  border-radius: 100%;
  margin: 5px;
}

.carousel-item {
  transition-duration: 0.25s;
}

.world-hero-img {
  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1)),
    url("../img/compressed-banner/world.png");
  background-size: cover;
  height: 50%;
  width: 100%;

  /* Position and center the image to scale nicely on all screens */
  position: relative;
  /* z-index: 2; */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.phoneGrid {
  display: grid;
  grid-template-columns: 17em auto 17em;
  grid-template-rows: 6em auto 17em;
  align-content: center;
  justify-content: center;
  text-align: left;
  grid-gap: 20px;
}

.col-top {
  grid-column: 1/3;
}

.phone_bg {
  /* background-image: url("../img/compressed-mobile/phone-confirm-details-small.png");
  background-color: transparent;
  z-index: 1;
  position: relative;
  display: inline-block;

 
  height: 596px;
  width: 300px;

  align-items: center;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;

  grid-column: 2;
  grid-row: span 3; */

  position: relative;
  display: inline-block;

  align-items: center;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;

  grid-column: 2;
  grid-row: span 3;
}
.phoneImg {
  grid-column: 2;
  grid-row: span 3;
}

.itemPlace-1 {
  grid-row: 3;
  grid-column: 1;
}

.itemPlace-2 {
  grid-row: 3;
  grid-column: 3;
}

.carousel-indicators {
  margin-left: auto;
  margin-right: auto;
  width: 17rem;
}

/* Change to 2 columns when window is 950px */
@media screen and (max-width: 950px) {
  .phoneGrid {
    grid-template-columns: auto 20em;
    grid-template-rows: 17em auto 17em;
    grid-gap: 3em 33px;
  }

  .itemPlace-1 {
    grid-row: 2;
    grid-column: 2;
  }

  .phone_bg {
    grid-column: 1;
    grid-row: span 3;
  }

  .itemPlace-2 {
    grid-row: 3;
    grid-column: 2;
    margin-top: 35px;
  }

  /* .carousel-indicators {
    text-align: right;
    float: right;
    right: 10%;
    left: inherit;
  } */
}

@media screen and (max-width: 600px) {
  /* Use whole screen on mobile devices */
  .info-section {
    max-width: 100%;
  }

  .height-6 {
    height: auto;
  }

  .world-hero-img {
    background-image: none;
  }

  .phoneGrid {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    grid-template-columns: 22em;
    grid-template-rows: 10em 12em auto;
    grid-gap: 0;
  }

  .itemPlace-1 {
    grid-row: 1;
    grid-column: 1;
    margin-top: 25px;
    margin-left: auto;
    margin-right: auto;
  }

  .phone_bg {
    /* grid-row: 3;
    grid-column: 1;
    background-image: url("../img/compressed-mobile/phone-confirm-details-small-half.png");
    margin-left: auto;
    margin-right: auto;
    background-size: contain;
    height: 296px; */
    grid-row: 3;
    grid-column: 1;
    margin-left: auto;
    margin-right: auto;
  }

  .phone_bg img {
    width: 95%;
  }
  .itemPlace-2 {
    grid-row: 2;
    grid-column: 1;
    margin: 0;
  }

  .carousel-indicators {
    top: 30%;
  }
  .carousel-control-next,
  .carousel-control-prev {
    bottom: 92.5%;
  }
}

@media screen and (max-width: 400px) {
  .phoneGrid {
    grid-template-columns: 15em;
    grid-template-rows: 10em 12em auto;
    grid-gap: 0;
  }

  .carousel-indicators {
    top: 35%;
  }
  .carousel-control-next,
  .carousel-control-prev {
    bottom: 92.5%;
  }

  /* .phone_bg {
    width: 80%;
  } */
}

